list of memes created

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testing tags</title>
 </head>
 <body>
-    
+   <h1>Testing tags</h1> 
+   <p>This is an <strong>important</strong> paragraph</p>
+   <p>Another one <em>emphasised</em></p>
+   <p>
+        1 <br>
+        2 <br>
+        3
+   </p>
+   <pre>
+        if age>=18:
+            print("What you say")
+   </pre>
+   <blockquote>
+        Do or do not, there is no try
+   </blockquote>
+   <p>List of memes:</p>
+   <ol>
+        <li>
+            Hello there
+        </li>
+        <li>Amogus</li>
+        <li>Super idol</li>
+   </ol>
 </body>
 </html>
