--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </p>
    <pre>
         if age>=18:
-            print("What you say")
+            print("What did you say?")
    </pre>
    <blockquote>
         Do or do not, there is no try
@@ -30,5 +30,8 @@
         <li>Amogus</li>
         <li>Super idol</li>
    </ol>
+   <p>Very sus</p>
+   <img src="img/esta.jpg" alt="Nice profile pic" height="90">
+
 </body>
 </html>
